# KCD

./: .gitignore  LICENSE  LICENSE.rtf  README.md  cect_copy.py  convert_orcascore.py  get_orcascore.py  integerify_2.py  lab_notes.md  pyproject.toml  running_nomanager.sh  running_nomanager_inf.sh  running_nomanager_train.sh  running_objcreate.sh  running_seginference.sh  running_slicetrain.sh  setup.py  slurm-498428.out  slurm-498428.stats  slurm-498429.out  slurm-498429.stats  slurm-498430.out  slurm-498430.stats  slurm-498431.out  slurm-498431.stats  slurm-498432.out  slurm-498432.stats  slurm-498433.out  slurm-498433.stats  slurm-498434.out  slurm-498434.stats  slurm-498435.out  slurm-498435.stats  slurm-498436.out  slurm-498436.stats  slurm-498471.out  slurm-498471.stats  slurm-498472.out  slurm-498472.stats  slurm-498480.out  (+15 more)
KCD/: label-pred-inspector.py
KCD/CrossValidationEvaluation/: eval_utils.py  plot_benchmarking.py  summarise_results.py  summarise_results_CNN.py  summarise_results_CNN3Dobj.py  summarise_results_CNNKwise.py  summarise_results_GNN.py  summarise_results_benchmarking3d.py  summarise_results_benchmarking_casewise.py  summarise_results_benchmarkingpy.py  summarise_results_ensemble.py  summarise_results_shapeensemble.py
KCD/Detection/Dataloaders/: Ensemble_dataloader_shapeonly_noCNN.py  classifier_dataloader_kw_3d.py  object_dataloader.py  slice_dataloader.py  sliceseg_dataloader.py  tilewise_dataloader.py
KCD/Detection/Evaluation/: eval_scripts.py  plot_benchmarking_AUC_Comparison.py  plot_benchmarking_ROC.py
KCD/Detection/Inference/: eval_utils.py  infer_utils.py  run_inference_ensemble.py  run_inference_ensemble_3d.py  (+4 more)
KCD/InferenceEvaluation/: Simulate_StageInference.py  analyse_combined_results.py  analyse_results_correct_boots.py  combine_results.py  compare.py  compare_shape.py  eigenCAM.py  label_checker.py  specsens_scatter.py
KCD/Segmentation/: CECT2NCCT_conversion_simple.py
KCD/coregistration/: coregister_dataset.py  coregister_dataset_fine.py  coregister_dataset_justfat.py  coregister_dataset_nondeform.py  utils.py
KCD/ne2ceCT/: dataloader.py  dcm2nii.py  loss_function.py  lr_scheduler.py  preprocess_ne2ceCT.py  train_all_allabel.py  train_coreg.py  train_smallcoreg.py  train_smallcoreg_local.py  train_smallcoregandcoltea.py
KCD/tcia_download/: tcia_2_nifti.py  tcia_download_script.py
KCD/utils/: dcm2nii.py
KCD_early.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
merged_obj/merged_training_set/: features_labelled.csv  normalisation_params.csv
ne2ceCT/: dataloader.py  dcm2nii.py  loss_function.py  preprocess_ne2ceCT.py  train.py  train_local.py  train_smallcoreg.py  train_smallcoregandcoltea.py
training_info/dira_tilemodel_dira_tilemodel_large_5_1_0.0005/: training.txt
(+4218 files in other folders)
