{\rtf1\ansi\ansicpg1252\cocoartf2709
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fmodern\fcharset0 Courier-Bold;\f1\fmodern\fcharset0 Courier;}
{\colortbl;\red255\green255\blue255;\red12\green95\blue24;\red234\green255\blue193;\red38\green38\blue38;
\red173\green173\blue173;\red83\green83\blue83;\red50\green91\blue142;}
{\*\expandedcolortbl;;\cssrgb\c0\c43922\c12549;\cssrgb\c93333\c100000\c80000;\cssrgb\c20000\c20000\c20000;
\cssrgb\c73333\c73333\c73333;\cssrgb\c40000\c40000\c40000;\cssrgb\c25098\c43922\c62745;}
\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\deftab720
\pard\pardeftab720\partightenfactor0

\f0\b\fs30\fsmilli15440 \cf2 \cb3 \expnd0\expndtw0\kerning0
[build-system]
\f1\b0 \cf4 \cb3 \
requires\cf5 \cb3  \cf6 =\cf5  \cf4 \cb3 [\cf7 \cb3 "setuptools>=61.0\'94,\'94pytorch-cuda==11.7\'94,\
			\'93dgl==1.0.2\'94,\'94scikit-image==0.19.3\'94,\
			\'93scikit-learn==1.2.2\'94,\'94scipy==1.10.1\'94,\
			\'93torchvision==0.15.2\'94,\'94simpleitk==2.2.1\'94,\
			\'93pydicom==2.3.1\'94,\'94pandas==1.5.3\'94,\
			\'93opencv-python==4.7.0.68\'94,\'94nibabel==5.0.0\'94,\
			\'93numpy==1.23.5\'94,\'94matplotlib==3.6.2\'94,\'94stl==0.0.3\'94,\
			\'93rt-utils==1.2.7\'94,\'94pymesh==1.0.2\'94,\
			\'93pymeshfix==0.16.2\'94,\'94open3d==0.16.1\'94,\
			\'93bpy==3.4.0\'94\cf4 \cb3 ]\
build-backend\cf5 \cb3  \cf6 =\cf5  \cf7 "setuptools.build_meta"\
\pard\pardeftab720\partightenfactor0
\cf4 \cb3 \
\pard\pardeftab720\partightenfactor0

\f0\b \cf2 \cb3 [project]
\f1\b0 \cf4 \cb3 \
name\cf5 \cb3  \cf6 =\cf5  \cf7 \'93KC_detection\'94\cf4 \cb3 \
version\cf5 \cb3  \cf6 =\cf5  \cf7 "0.0.1"\cf4 \cb3 \
authors\cf5 \cb3  \cf6 =\cf5  \cf4 \cb3 [\
\cf5 \cb3   \cf4 \cb3 \{\cf5 \cb3  \cf4 \cb3 name\cf6 \cb3 =\cf7 \'93William Clenshaw McGough\'94\cf4 \cb3 ,\cf5 \cb3  \cf4 \cb3 email\cf6 \cb3 =\cf7 \'93billy.mcgough1@hotmail.com\cf5  \cf4 \cb3 \},\
]\
description\cf5 \cb3  \cf6 =\cf5  \cf7 \'93A python package holding the code required for my paper on cancer detection via AI in NCCT\'94\cf4 \cb3 \
readme\cf5 \cb3  \cf6 =\cf5  \cf7 "README.md"\cf4 \cb3 \
requires-python\cf5 \cb3  \cf6 =\cf5  \cf7 ">=3.10\'94\cf4 \cb3 \
classifiers\cf5 \cb3  \cf6 =\cf5  \cf4 \cb3 [\
\cf5 \cb3     \cf7 "Programming Language :: Python :: 3"\cf4 \cb3 ,\
\cf5 \cb3     \cf7 "License :: OSI Approved :: MIT License"\cf4 \cb3 ,\
\cf5 \cb3     \cf7 "Operating System :: OS Independent"\cf4 \cb3 ,\
]\
\

\f0\b \cf2 \cb3 [project.urls]
\f1\b0 \cf4 \cb3 \
\cf7 \cb3 "Homepage"\cf5  \cf6 =\cf5  \cf7 "https://github.com/mcgoughlin/KCD"\cf4 \cb3 \
\cf7 \cb3 "Bug Tracker"\cf5  \cf6 =\cf5  \cf7 "https://github.com/mcgoughlin/KCD/issues"\cf4 \cb3 \
}